Error response format.